# tokemetry

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd-dashboard-v2.txt  prd-dashboard-v3.txt  prd-dashboard-v4.txt  prd-dashboard-v5.txt  prd.txt  tokemetry_integrations_prd.md  (+1 more)
apps/collector/: pyproject.toml
apps/collector/src/tokemetry_collector/: __init__.py  cli.py  config.py  limits_anthropic.py  limits_openai.py  limits_zai.py  runner.py  sources.py  state.py  uploader.py  wire.py
apps/collector/tests/integration/: test_claude_code_collection.py
apps/collector/tests/unit/: test_cli.py  test_collector_config.py  test_example_config.py  test_installer_scripts.py  test_limits_anthropic.py  test_limits_openai.py  test_limits_zai.py  test_runner.py  test_state.py  test_uploader.py  test_wire_limits.py
apps/server/: alembic.ini  pyproject.toml
apps/server/src/tokemetry_server/: __init__.py  __main__.py  app.py  cli.py  config.py  providers.py  scopes.py  security.py
apps/server/src/tokemetry_server/api/: __init__.py  alerts.py  auth.py  deps.py  ingest.py  pricing.py  query.py  schemas.py  schemas_alerts.py  schemas_query.py  security.py  serialization.py  stream.py  tokens.py
apps/server/src/tokemetry_server/api/v2/: __init__.py  admin_data.py  audit.py  costs.py  csv_export.py  heatmap.py  ingest.py  otel.py  pricing.py  query_deps.py  registries.py  requests.py  resources.py  retention.py  schemas.py  sessions.py  sources.py  summary.py  usage.py
apps/server/src/tokemetry_server/db/: __init__.py  backfill.py  base.py  migrate.py  models.py  pricing_migration.py  session.py  upsert.py
apps/server/src/tokemetry_server/db/migrations/: env.py
apps/server/src/tokemetry_server/db/migrations/versions/: 0001_initial_schema.py  0002_alert_dual_thresholds_state.py  0003_app_settings.py  0004_registry_tables.py  0005_data_quality_events.py  0006_usage_events_v2_ledger.py  0007_ingest_batches.py  0008_backfill_usage_events_v2.py  0009_usage_events_v2_transitional_cost.py  0010_usage_events_compat_view.py  0011_sources.py  0012_source_health.py  0013_token_scopes.py  0014_v1_source_attribution.py  0015_rate_cards.py  0016_billable_units.py  0017_computed_costs.py  0018_audit_log.py  0019_daily_rollups_v2_grain.py  0020_grafana_views_v2.py  0021_usage_events_v2_attempt_ts_index.py  0022_provider_windows.py  0023_limit_snapshot_dimensions.py  0024_usage_event_observed_cost.py  0025_alert_rule_entity_state.py  0026_retention_status.py  0027_audit_log_request_id.py
apps/server/src/tokemetry_server/ops/: __init__.py  restore_verify.py
apps/server/src/tokemetry_server/otel/: __init__.py  convert.py  receiver.py  semconv.py
apps/server/src/tokemetry_server/services/: __init__.py  admin_deletion.py  agent_hierarchy.py  analytics.py  audit.py  billing_mode.py  broadcast.py  cache_savings.py  channel_config.py  computed_costs.py  cost.py  cost_queries.py  cost_v2.py  cost_worker.py  data_quality.py  heatmap_v2.py  ingest.py  ingest_v2.py  ingest_v2_meta.py  insights.py  limit_forecast.py  limit_grouping.py  litellm_sync.py  live_overview.py  logical_requests.py  pricing_adapter.py  pricing_admin.py  pricing_import.py  pricing_repo.py  pricing_v2.py  privacy.py  queries.py  queries_v2.py  query_framework.py  rate_limit.py  registries.py  registry_backfill.py  report.py  report_export.py  repricing.py  (+11 more)
apps/server/src/tokemetry_server/services/alerting/: __init__.py  engine.py  filters.py  notifiers.py  rules.py  seed.py
apps/server/tests/: conftest.py
apps/server/tests/fixtures/v1_golden/: ingest_bootstrap.json  ingest_events.json  ingest_limits.json
apps/server/tests/fixtures/v1_golden/responses/: cost.json  limits_current.json  session_detail.json  sessions.json  summary_overview.json  usage_day.json  usage_machine.json  usage_model.json  usage_project.json  usage_provider.json  usage_session.json
apps/server/tests/integration/: test_accounting_alerts.py  test_admin_data_api.py  test_admin_deletion.py  test_agent_hierarchy.py  test_alert_engine.py  test_alert_epic_acceptance.py  test_alert_filters.py  test_alert_rules.py  test_alert_seed.py  test_alerts_api.py  test_analytics.py  test_audit.py  test_audit_api.py  test_backfill_v2.py  test_backup_scripts.py  test_billable_units.py  test_billing_modes.py  test_cache_savings.py  test_channels.py  test_computed_costs.py  test_cost_v2.py  test_cost_worker.py  test_csv_export.py  test_data_quality.py  test_grafana_views.py  test_hardening_api.py  test_heatmap_v2.py  test_ingest.py  test_ingest_v2.py  test_ingest_v2_api.py  test_ingest_v2_meta_api.py  test_limit_forecast.py  test_limit_grouping.py  test_limit_ingest_flood.py  test_limits_epic.py  test_litellm_sync.py  test_live_overview.py  test_live_overview_api.py  test_logical_requests.py  test_migrations.py  (+58 more)
apps/server/tests/integration/proxy_harness/: __init__.py  conformance.py  conftest.py  driver.py  fixtures.py  test_conformance_v2.py  test_e2e_acceptance.py  test_proxy_harness.py
apps/server/tests/perf/: README.md  __init__.py  benchmark.py  dataset.py  test_benchmark_smoke.py  test_ingest_throughput.py  test_throughput_guard.py  throughput_guard.py
apps/server/tests/security/: README.md  test_content_and_limits.py  test_injection.py  test_redaction_and_pseudonymity.py  test_revoked_token.py  test_scope_and_token_bypass.py
apps/server/tests/unit/: test_billing_mode.py  test_config.py  test_cost_engine.py  test_deploy_env_example.py  test_insights.py  test_notifiers.py  test_otel_convert.py  test_otel_semconv.py  test_privacy.py  test_query_framework.py  test_quiet_hours.py  test_rate_limit.py  test_rate_limit_and_security.py  test_report_export.py  test_report_rules.py  test_reset_rollover.py  test_revisions.py  test_scopes.py  test_security.py  test_server_package.py  test_session_stats.py  test_trace_context.py
deploy/: .env.example  Dockerfile  backup.sh  collector.example.toml  docker-compose.yml  restore.sh  verify-restore.sh
docs/: README.md  alerting.md
(+166 files in other folders)
