# tokemetry-collector: per-machine usage collector daemon.
[project]
name = "tokemetry-collector"
version = "0.1.0"
description = "tokemetry per-machine usage collector daemon"
requires-python = ">=3.12"
dependencies = [
  "tokemetry-core",
  "httpx>=0.28",
  "watchdog>=6.0",
  "loguru>=0.7",
  "pydantic-settings>=2.7",
]

[project.scripts]
tokemetry-collector = "tokemetry_collector.cli:main"

[tool.uv.sources]
tokemetry-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokemetry_collector"]
