# tokemetry-server: FastAPI service (ingest, query API, engines, alerting).
[project]
name = "tokemetry-server"
version = "0.1.0"
description = "tokemetry central server: ingest, query API, engines, alerting"
requires-python = ">=3.12"
dependencies = [
  "tokemetry-core",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "asyncpg>=0.30",
  "aiosqlite>=0.20",
  "httpx>=0.28",
  "loguru>=0.7",
  "pydantic-settings>=2.7",
]

[tool.uv.sources]
tokemetry-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokemetry_server"]
